--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "newer-tarot",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://feliciaj629.github.io/newer-tarot",
+  "homepage": "https://feliciaj628.github.io",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.4.2",
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
